# StripPacking

./: .gitignore  BinDrawer.cpp  BinDrawer.h  BinpackConstructionHeuristic.h  BinpackData.h  CMakeLists.txt  CornerPoints.cpp  CornerPoints.h  DataLoaderOdp.cpp  DataLoaderOdp.h  Err.h  FeatureExtractor.cpp  FeatureExtractor.h  NeuralNetwork.cpp  NeuralNetwork.h  NeuralStrategy.cpp  NeuralStrategy.h  P2D.h  PlacementStrategy.h  StripBoard.cpp  StripBoard.h  StripPacker.cpp  StripPacker.h  Trainer.cpp  Trainer.h  main.cpp  utils.h
best_models/: best_best_model  best_model  new_best_best_model  ok_model.weights
bin_drawer/: BinDrawer.cpp  BinDrawer.h
bin_reader/: DataLoaderOdp.cpp  DataLoaderOdp.h
data/: ODPS_one_problem.txt  ODPS_small_test.txt
data/scripts/: create_problems.py
placement_strategies/: BottomLeftStrategy.cpp  BottomLeftStrategy.h  CornerPoints.h  EvolutionaryStrategy.cpp  EvolutionaryStrategy.h  Individual.h  MaxRectsStrategy.cpp  MaxRectsStrategy.h  PermutationIndividual.cpp  PermutationIndividual.h  PlacementStrategy.h
startegy/: BinpackConstructionHeuristic.h  EvolutionaryAlgorithm.h  FFN.h
